# babble

./: .gitignore  Cargo.toml  POPL23.md  README.md  rust-toolchain.toml
babble-macros/src/: lib.rs  parse.rs
experiments/: Cargo.toml
experiments/src/: beam_experiment.rs  cache.rs  eqsat_experiment.rs  lib.rs
experiments/src/benchmark/: main.rs
experiments/src/compression/: main.rs
experiments/src/drawings/: eval.rs  lang.rs  main.rs  svg.rs
experiments/src/dreamcoder/: expr.rs  json.rs  parse.rs  types.rs  util.rs
experiments/src/list/: lang.rs  main.rs
experiments/src/parse_dc/: main.rs
experiments/src/print_benchmarks/: main.rs
experiments/src/smiley/: eval.rs  lang.rs  main.rs  svg.rs
resource/: bb_tracer.csv
src/: analysis.rs  ast_node.rs  au_filter.rs  au_merge.rs  au_search.rs  bb_query.rs  beam_pareto_test.rs  co_occurrence.rs  dfta.rs  expand.rs  ga.rs  learn.rs  lib.rs  perf_infer.rs  rewrites.rs  runner.rs  schedule.rs  sexp.rs  simple_lang.rs  teachable.rs  util.rs  vectorize.rs
src/ast_node/: expr.rs  partial_expr.rs  pretty.rs
src/extract/: beam.rs  beam_knapsack.rs  beam_pareto.rs  cost.rs  mod.rs
