[workspace]
# members = [".", "babble-macros", "experiments"]
# members = [".", "babble-macros"]
default-members = [".", "babble-macros"]

[package]
name = "babble"
description = "improved library learning"
version = "0.1.0"
authors = ["David Cao <david@cao.sh>", "Rose Kunkel <rose@rosekunkel.me>"]
repository = "https://github.com/dcao/babble"
license = "MIT"
keywords = ["e-graphs", "program-synthesis"]
categories = ["command-line-utilities"]
edition = "2024"

[workspace.dependencies]
egg = { version = "0.10.0", features = ["serde-1"] }
itertools = "0.14.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.11"
log = "0.4"
anyhow = "1"
thiserror = "2.0.11"
babble-macros = { path = "babble-macros" }
nom = "7"
toml = "0.7"
csv = "1.2"

[dependencies]
egg.workspace = true
babble-macros.workspace = true
itertools.workspace = true
env_logger.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
anyhow.workspace = true
nom.workspace = true
grb = { version = "1.3.0", optional = true }
smallvec = "1.8"
memory-stats = "1.0"
rand = "0.8"
rustc-hash = "1.1"
seahash = "4.1"
bitvec = "1.0"
rayon = "1.8"
strum = { version = "0.27", features = ["derive"] }
csv = "1.2"
lexpr = "0.2.7"
indexmap = "1.9"

[profile.release]
debug = true
